sidenav v1, mongodb atlas

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,5 +1,16 @@
 <%- include('partials/header'); %>
+    <div class="sidenav">
+        <ul>
+            <li><a href="#">CPU</a></li>
+            <li><a href="#">CPU</a></li>
+            <li><a href="#">CPU</a></li>
+            <li><a href="#">CPU</a></li>
+            <li><a href="#">CPU</a></li>
+            <li><a href="#">CPU</a></li>
+            <li><a href="#">CPU</a></li>
+        </ul>
 
+    </div>
     <div class="products">
         <% for(let index = 0; index < products.length; index++){ %>
             <div class="card ">
