--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,17 +1,23 @@
 .container-fluid {
+    padding: 0 7% 0 7%; 
+}
+
+.content{
     padding: 0 7% 0 7%;
 }
 
 body {
     font-family: 'Montserrat', sans-serif;
-    padding: 0 15%;
+    background-color: azure;
 }
 
 .logo {
     font-size: 40px;
     font-weight: 900;
 }
-
+.card {
+    align-items: flex-end;
+}
 .card-img-top {
     padding: 8%;
 }
@@ -51,21 +57,38 @@ p {
 .products {
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
 }
 
 .card {
-    width: 20em;
+    width: 25%;
 }
 
 .sidenav {
-    height: 100%; /* Full-height: remove this if you want "auto" height */
-    width: 160px; /* Set the width of the sidebar */
-    position: fixed; /* Fixed Sidebar (stay in place on scroll) */
-    z-index: 1; /* Stay on top */
-    top: 0; /* Stay at the top */
-    left: 0;
-    background-color: #111; /* Black */
-    overflow-x: hidden; /* Disable horizontal scroll */
-    padding-top: 20px;
+    background-color: grey;
   }
 
+.nav-link {
+    text-align: center;
+}
+
+
+.my-card-footer {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    padding: 0 15px 13px;
+}
+
+li {
+    border: 1px solid;
+    background-color: ghostwhite;
+    padding: 4px 10px;
+}
+
+
+ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 12px 0 0 0;
+}
