--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -16,14 +16,14 @@
 </head>
 <body>
     <nav class="navbar bg-light">
-        <div class="container-fluid fs-5">
-            <a class="navbar-brand logo" href="#">PostavPC</a>
-            <form action="#" class="d-flex fs-5">
+        <div class="container-fluid justify-content-center fs-5 row">
+            <a class="navbar-brand logo col" href="#">PostavPC</a>
+            <form action="#" class="d-flex fs-5 col-6">
                 <input class="form-control me-2" placeholder="Čo hľadáte ?">
                 <button class="btn btn-outline-primary me-2">Hľadať</button>
             </form>
-            <a href="#" class="nav-link"><i class="fa-solid fa-arrow-right-to-bracket"></i> Prihlásiť sa</a>
-            <a href="#" class="nav-link"><i class="fa-solid fa-basket-shopping"></i> Košík</a>
+            <a href="#" class="nav-link col"><i class="fa-solid fa-arrow-right-to-bracket"></i> Prihlásiť sa</a>
+            <a href="#" class="nav-link col"><i class="fa-solid fa-basket-shopping"></i> Košík</a>
         </div>
     </nav>
 
