--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -17,7 +17,7 @@
 <body>
     <nav class="navbar bg-light">
         <div class="container-fluid justify-content-center fs-5 row">
-            <a class="navbar-brand logo col" href="#">PostavPC</a>
+            <a class="navbar-brand logo col" href="/">PostavPC</a>
             <form action="#" class="d-flex fs-5 col-6">
                 <input class="form-control me-2" placeholder="Čo hľadáte ?">
                 <button class="btn btn-outline-primary me-2">Hľadať</button>
