--- a/views/partials/sidenav.ejs
+++ b/views/partials/sidenav.ejs
@@ -1,12 +1,12 @@
-<div class="sidenav col-2">
+<div class="sidenav col-2 ">
     <ul>
-        <li><a href="#">Graficke Karty</a></li>
-        <li><a href="#">Procesory</a></li>
-        <li><a href="#">RAM pamate</a></li>
-        <li><a href="#">Chladice</a></li>
-        <li><a href="#">CPU</a></li>
-        <li><a href="#">CPU</a></li>
-        <li><a href="#">CPU</a></li>
+        <li><a href="/categories/1">Graficke karty</a></li>
+        <li><a href="/categories/2">Procesory</a></li>
+        <li><a href="/categories/3">RAM pamate</a></li>
+        <li><a href="#">Disky a SSD</a></li>
+        <li><a href="#">Zakladne dosky</a></li>
+        <li><a href="#">Skrinky</a></li>
+        <li><a href="#">Zdroje</a></li>
+        <li><a href="#">Chladenie</a></li>
     </ul>
-
 </div>
