--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,9 +1,9 @@
 .container-fluid {
-    padding: 0 7% 0 7%; 
+    padding: 0 15% 0; 
 }
 
 .content{
-    padding: 0 7% 0 7%;
+    padding: 0 15% 0;
 }
 
 body {
@@ -18,6 +18,7 @@ body {
 .card {
     align-items: flex-end;
 }
+
 .card-img-top {
     padding: 8%;
 }
@@ -34,19 +35,13 @@ body {
     color: #00275a;
 }
 
-.card-text{
-    margin-bottom: 50px;
-}
 
 .price{
     color: #e9242e;
     font-weight: bold;
-    font-size: 25px;
+    font-size: 20px;
 }
 
-.buy-btn {
-    float: right;
-}
 
 p {
     color: #4a5a64;
@@ -57,7 +52,6 @@ p {
 .products {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
 }
 
 .card {
