--- a/views/home.ejs
+++ b/views/home.ejs
@@ -11,12 +11,10 @@
                 <div class="card-body">
                     <a href="#" class="card-title"><%=products[index].name%></a>
                     <p class="card-text"><%=products[index].desc%></p>
-                    
-                    
                 </div>
                 <div class="my-card-footer">
                     <span class="price"><%=products[index].price%> €</span>
-                    <a href="#" class="btn btn-primary buy-btn"><i class="fa-solid fa-cart-shopping"></i> Kúpiť</a>
+                    <a href="#" class="btn btn-primary"><i class="fa-solid fa-cart-shopping"></i> Kúpiť</a>
                 </div>
             </div>
         <% } %>
