--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -16,7 +16,7 @@
 </head>
 <body>
     <nav class="navbar bg-light">
-        <div class="container-fluid justify-content-center fs-5 row">
+        <div class="container-fluid justify-content-center row">
             <a class="navbar-brand logo col" href="/">PostavPC</a>
             <form action="#" class="d-flex fs-5 col-6">
                 <input class="form-control me-2" placeholder="Čo hľadáte ?">
