--- a/views/partials/sidenav.ejs
+++ b/views/partials/sidenav.ejs
@@ -3,10 +3,10 @@
         <li><a href="/categories/1">Graficke karty</a></li>
         <li><a href="/categories/2">Procesory</a></li>
         <li><a href="/categories/3">RAM pamate</a></li>
-        <li><a href="#">Disky a SSD</a></li>
-        <li><a href="#">Zakladne dosky</a></li>
-        <li><a href="#">Skrinky</a></li>
-        <li><a href="#">Zdroje</a></li>
-        <li><a href="#">Chladenie</a></li>
+        <li><a href="/categories/4">Disky a SSD</a></li>
+        <li><a href="/categories/5">Zakladne dosky</a></li>
+        <li><a href="/categories/6">Skrinky</a></li>
+        <li><a href="/categories/7">Zdroje</a></li>
+        <li><a href="/categories/8">Chladenie</a></li>
     </ul>
 </div>
