--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -15,9 +15,7 @@ body {
     font-size: 40px;
     font-weight: 900;
 }
-.card {
-    align-items: flex-end;
-}
+
 
 .card-img-top {
     padding: 8%;
@@ -25,7 +23,7 @@ body {
 
 .card-title {
     font-weight: 700;
-    font-size: 15px;
+    font-size: 13px;
     color: #00275a;
     text-decoration: none;
 }
@@ -55,11 +53,13 @@ p {
 }
 
 .card {
-    width: 25%;
+    width: 33.3333%;
 }
 
 .sidenav {
-    background-color: grey;
+    background-color: white;
+    padding:0;
+    border: 1px solid
   }
 
 .nav-link {
@@ -75,7 +75,7 @@ p {
 }
 
 li {
-    border: 1px solid;
+    border-top: 2px solid #00275a;
     background-color: ghostwhite;
     padding: 4px 10px;
 }
