--- a/views/home.ejs
+++ b/views/home.ejs
@@ -7,7 +7,7 @@
     <div class="products col-10">
         <% for(let index = 0; index < products.length; index++){ %>
             <div class="card ">
-                <img src="<%=products[index].img%>" class="card-img-top" alt="cpucko">
+                <img src="<%=products[index].img%>" class="card-img-top" alt="obrazok">
                 <div class="card-body">
                     <a href="#" class="card-title"><%=products[index].name%></a>
                     <p class="card-text"><%=products[index].desc%></p>
