--- a/views/partials/sidenav.ejs
+++ b/views/partials/sidenav.ejs
@@ -8,5 +8,9 @@
         <li><a href="/categories/6">Skrinky</a></li>
         <li><a href="/categories/7">Zdroje</a></li>
         <li><a href="/categories/8">Chladenie</a></li>
+        <li><a href="/categories/9" style="color:red; font-weight: bold;">Black Friday</a></li>
+    </ul>
+    <ul>
+        <li><a href="/newprod">Pridať nový produkt</a></li>
     </ul>
 </div>
