--- a/views/partials/sidenav.ejs
+++ b/views/partials/sidenav.ejs
@@ -1,16 +1,16 @@
 <div class="sidenav col-2 ">
-    <ul>
-        <li><a href="/categories/1">Graficke karty</a></li>
-        <li><a href="/categories/2">Procesory</a></li>
-        <li><a href="/categories/3">RAM pamate</a></li>
-        <li><a href="/categories/4">Disky a SSD</a></li>
-        <li><a href="/categories/5">Zakladne dosky</a></li>
-        <li><a href="/categories/6">Skrinky</a></li>
-        <li><a href="/categories/7">Zdroje</a></li>
-        <li><a href="/categories/8">Chladenie</a></li>
-        <li><a href="/categories/9" style="color:red; font-weight: bold;">Black Friday</a></li>
-    </ul>
-    <ul>
-        <li><a href="/newprod">Pridať nový produkt</a></li>
-    </ul>
+    <div class="sidenav-group">
+        <a href="/categories/1">Grafické karty</a>
+        <a href="/categories/2">Procesory</a>
+        <a href="/categories/3">Pamäte RAM</a>
+        <a href="/categories/4">Disky a SSD</a>
+        <a href="/categories/5">Základné dosky</a>
+        <a href="/categories/6">PC Skrinky</a>
+        <a href="/categories/7">Zdroje</a>
+        <a href="/categories/8">Chladenie</a>
+        <a href="/categories/9" style="color:red; font-weight: bold;">Black Friday</a>
+    </div>
+    <div class="sidenav-group">
+        <a href="/newprod">Pridať nový produkt</a>
+    </div>
 </div>
