--- a/views/newprod.ejs
+++ b/views/newprod.ejs
@@ -8,46 +8,47 @@
         <form action="/newprod" method="post">
             <div class="form-group">
                 <label for="newProdName">Názov</label>
-                    <input type="text" class="form-control" name="newProdName" placeholder="napr. AMD Ryzen 7 5800X">
+                    <input type="text" class="form-control" name="newProdName" placeholder="napr. AMD Ryzen 7 5800X" required>
             </div>
 
             <div class="form-group">
                 <label for="newProdCategory">Kategória</label>
-                <select class="form-control" name="newProdCategory">
-                  <option>1</option>
-                  <option>2</option>
-                  <option>3</option>
-                  <option>4</option>
-                  <option>5</option>
-                  <option>6</option>
-                  <option>7</option>
-                  <option>8</option>
-                  <option>9</option>
+                <select class="form-control" name="newProdCategory" required>
+                    <option value="">--- VYBERTE KATEGÓRIU ---</option>
+                    <option value="1">Grafické Karty</option>
+                    <option value="2">Procesory</option>
+                    <option value="3">Pamäte RAM</option>
+                    <option value="4">Disky a SSD</option>
+                    <option value="5">Základné dosky</option>
+                    <option value="6">PC Skrinky</option>
+                    <option value="7">Zdroje</option>
+                    <option value="8">Chladenie</option>
+                    <option value="9">Black Friday</option>
                 </select>
             </div>
 
             <div class="form-group">
                 <label for="newProdDescription">Popis</label>
-                    <input type="text" class="form-control" name="newProdDescription" placeholder="napr. 'Procesor 8-jadrový, 16 vláken, ...'">
+                    <input type="text" class="form-control" name="newProdDescription" placeholder="napr. 'Procesor 8-jadrový, 16 vláken, ...'" required>
             </div>
 
             <div class="form-group">
                 <label for="newProdStock">Kusov na sklade</label>
-                    <input type="number" class="form-control" name="newProdStock">
+                    <input type="number" class="form-control" name="newProdStock" required>
             </div>
 
             <div class="form-group">
                 <label for="newProdRating">Hodnotenie</label>
-                    <input type="number" class="form-control" name="newProdRating" min="0" max="5">
+                    <input type="number" class="form-control" name="newProdRating" min="0" max="5" required>
             </div>
             <div class="form-group">
                 <label for="newProdPrice">Cena</label>
-                    <input type="number" class="form-control" name="newProdPrice" step="any" min="0">
+                    <input type="number" class="form-control" name="newProdPrice" step="any" min="0" required>
             </div>
 
             <div class="form-group">
                 <label for="newProdImg">URL na obrázok</label>
-                    <input type="text" class="form-control" name="newProdImg" placeholder="napr. 'https://cdn.alza.sk/ia45g5r4sd3b'">
+                    <input type="text" class="form-control" name="newProdImg" placeholder="napr. 'https://cdn.alza.sk/ia45g5r4sd3b'" required>
             </div>
             <button type="submit" class="btn btn-primary">Pridať</button>
         </form>
