--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -22,7 +22,7 @@
                 <input class="form-control me-2" placeholder="Čo hľadáte ?">
                 <button class="btn btn-outline-primary me-2">Hľadať</button>
             </form>
-            <a href="#" class="nav-link col"><i class="fa-solid fa-arrow-right-to-bracket"></i> Prihlásiť sa</a>
+            <a href="/login" class="nav-link col"><i class="fa-solid fa-arrow-right-to-bracket"></i> Prihlásiť sa</a>
             <a href="#" class="nav-link col"><i class="fa-solid fa-basket-shopping"></i> Košík</a>
         </div>
     </nav>
