--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -22,7 +22,14 @@
                 <input class="form-control me-2" placeholder="Čo hľadáte ?">
                 <button class="btn btn-outline-primary me-2">Hľadať</button>
             </form>
-            <a href="/login" class="nav-link col"><i class="fa-solid fa-arrow-right-to-bracket"></i> Prihlásiť sa</a>
+            <% if(typeof user !== 'undefined') {%>
+                <a href="/profile" class="nav-link col"><i class="fa-solid fa-user"></i> <%= user.username %></a>
+
+              <% } %>
+            <% if(typeof user == 'undefined') { %>
+                <a href="/login" class="nav-link col"><i class="fa-solid fa-arrow-right-to-bracket"></i> Prihlasit sa</a>
+                <% } %>
+
             <a href="#" class="nav-link col"><i class="fa-solid fa-basket-shopping"></i> Košík</a>
         </div>
     </nav>
