--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,22 +1,34 @@
-<%- include('partials/header'); %>
 
-<div class="content">
-    <form action="/register" method="POST">
-        <div>
-            <label for="username">Username</label>
-            <input type="text" id="username" name="username" required>
-        </div>
-        <div>
-            <label for="email">Email</label>
-            <input type="email" id="email" name="email" required>
-        </div>
-        <div>
-            <label for="password">Password</label>
-            <input type="password" id="password" name="password" required>
-        </div>
-        
-        
-        <button type="submit">Register</button>
-    </form>
-    <p>Este nemas ucet ? <a href="/register">Zaregistrovat sa</a></p>
-</div>
+
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>PostavPC</title>
+        <link rel="stylesheet" href="/css/login.css">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    </head>
+<body>
+    <div class="content">
+        <form action="/register" method="POST">
+            <div class="form-group">
+                <label for="username">Username</label>
+                <input class="form-control" type="text" id="username" name="username" required>
+            </div>
+            <div class="form-group">
+                <label for="email">Email</label>
+                <input class="form-control" type="email" id="email" name="email" required>
+            </div>
+            <div class="form-group">
+                <label for="password">Password</label>
+                <input class="form-control" type="password" id="password" name="password" required>
+            </div>
+            
+            
+            <button class="btn btn-primary" type="submit">Register</button>
+        </form>
+        <p>Uz mas ucet ? <a href="/login">Prihlasit sa</a></p>
+    </div>
+</body>
+</html>
