--- a/views/partials/sidenav.ejs
+++ b/views/partials/sidenav.ejs
@@ -11,9 +11,12 @@
         <a href="/categories/9" style="color:red; font-weight: bold;">Black Friday</a>
     </div>
 
-    <div class="sidenav-group">
-        <a href="/newprod">Pridať nový produkt</a>
-    </div>
-
+    <% if(typeof user !== 'undefined') { %>
+        <% if(user.isAdmin) { %>
+            <div class="sidenav-group">
+                <a href="/newprod">Pridať nový produkt</a>
+            </div>
+        <% } %> 
+    <% } %>
     
 </div>
