Add product page

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -17,7 +17,7 @@
                             <i class="fa-regular fa-star"></i>
                         <% } %>
                     </span>
-                    <a href="#" class="card-title"><%=products[index].name%></a>
+                    <a href="/product/<%=products[index]._id %>" class="card-title"><%=products[index].name%></a>
                     <p class="card-text"><%=products[index].desc%></p>
                 </div>
                 <div class="my-card-footer">
