--- a/views/newprod.ejs
+++ b/views/newprod.ejs
@@ -4,7 +4,7 @@
     
     <%- include('partials/sidenav'); %>
 
-    <div class="new-prod-form col-10">
+    <div class="tab col-10">
         <form action="/newprod" method="post">
             <div class="form-group">
                 <label for="newProdName">Názov</label>
