--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -6,10 +6,6 @@
     padding: 10px 15% 0;
 }
 
-.new-prod-form {
-    border: 1px solid;
-    border-radius: 0.375rem;
-}
 
 html {
     min-height: 100%;
@@ -88,9 +84,11 @@ p {
 
 
 /* NOVY PRODUKT */
-.new-prod-form {
+.tab {
     background-color: ghostwhite;
     padding: 1rem;
+    border: 1px solid;
+    border-radius: 0.375rem;
 }
 
 .form-group {
@@ -134,4 +132,6 @@ p {
     background-color: rgba(85, 85, 85, 0.1);
 }
 
-
+.product-image{
+    width: 100%;
+}
