--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -13,6 +13,8 @@
     <script src="https://kit.fontawesome.com/193137f408.js" crossorigin="anonymous"></script>
 
     <title>PostavPC</title>
+    <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16x16.png"> 
 </head>
 <body>
     <nav class="navbar bg-light">
