Add shopping cart v1

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -32,7 +32,7 @@
                 <a href="/login" class="nav-link col"><i class="fa-solid fa-arrow-right-to-bracket"></i> Prihlasit sa</a>
                 <% } %>
 
-            <a href="#" class="nav-link col"><i class="fa-solid fa-basket-shopping"></i> Košík</a>
+            <a href="/cart" class="nav-link col"><i class="fa-solid fa-basket-shopping"></i> Košík</a>
         </div>
     </nav>
 
