Email after registration, search bar, cookies popup

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -15,7 +15,7 @@
               </div>
               <div class="cookie-consent-selection">
         
-                <form action="/cookiePreference" method="get">
+                <form action="/cookiePreference" method="post">
                     <button name="cookiePreference" value="false" class="cookie-consent-deny">Iba nevyhnutné</button>
                     <button name="cookiePreference" value="true" class="cookie-consent-allow">Povoliť všetky cookies</button>
                 </form>
