--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -86,9 +86,11 @@ p {
 /* NOVY PRODUKT */
 .tab {
     background-color: ghostwhite;
-    padding: 1rem;
-    border: 1px solid;
+    padding: 1rem 1rem 2rem 1rem;
+    border: solid;
     border-radius: 0.375rem;
+    border-color: #4a5a64;
+    margin-bottom: -10px;
 }
 
 .form-group {
@@ -136,10 +138,26 @@ p {
     width: 100%;
 }
 
+#footer {
+    width:100%;
+    height:500px;
+}
 
+.star-rating {
+    text-align: center;
+    width: 170px;
+}
 
+.review {
+    background-color: #f4f4f4;
+    margin-bottom: 10px;
+    border: none;
+    border-color: #4a5a64;
+}
 
-
+.reviewBody {
+    font-size: 20px;
+}
 
 #simple-cookie-consent {
     height: 100vh;
