--- a/views/product.ejs
+++ b/views/product.ejs
@@ -36,7 +36,7 @@
                      <i class="fa-regular fa-star"></i>
                      <% } %>
                </div>
-               <p>by <b><%= product.reviews[i].user.username%></b></p>
+               <p>od <b><%= product.reviews[i].user.username%></b></p>
                <p class="reviewBody"><%= product.reviews[i].comment%></p>
             </div>
 
