--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -12,7 +12,7 @@ html {
 }
 body {
     font-family: 'Montserrat', sans-serif;
-    background: linear-gradient(180deg, rgba(248,249,250,1) 100px, rgba(255,136,136,1) 300px);
+    background: linear-gradient(180deg, rgba(248,249,250,1) 100px, #ff8888 300px);
 
     overflow-x: hidden;
 }
@@ -138,10 +138,33 @@ p {
     width: 100%;
 }
 
-#footer {
-    width:100%;
-    height:500px;
+footer {
+    margin: 75px 15% 0;
+    height: 200px;
+    background-color: rgb(153, 79, 79);
+    border-radius: 0.375rem;
+    text-align: center;
+    padding: 1.5% 0;
+
 }
+
+.footer-p {
+    padding: 20px 0 0;
+}
+
+footer>p {
+    color: black;
+}
+
+.fa-circle{
+    color: rgb(135, 70, 70);
+}
+
+.fa-stack-1x {
+    color: rgb(255, 202, 202);
+}
+
+
 
 .star-rating {
     text-align: center;
@@ -179,6 +202,7 @@ p {
     background: #fff;
     padding: 20px;
     max-width: 500px;
+    border-radius: 0.375rem;
 }
 #simple-cookie-consent .cookie-consent-selection {
     text-align: right;
@@ -189,6 +213,7 @@ p {
     margin: 10px 0 0 10px;
     background: none;
     font-size: 1.1em;
+    border-radius: 0.375rem;
 }
 #simple-cookie-consent button.cookie-consent-allow {
     background-color: #04aa6d;
