--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,22 @@
-<footer id="footer">
-    
+<footer>
+    <a href="https://wa.link/gftuxe" class="fa-stack fa-2x" target="_blank">
+        <i class="fa fa-circle fa-stack-2x"></i>
+        <i class="fa-brands fa-whatsapp fa-stack-1x"></i>
+    </a>
+    <a href="https://www.instagram.com/peter_michalik23/" class="fa-stack fa-2x" target="_blank">
+        <i class="fa fa-circle fa-stack-2x"></i>
+        <i class="fa-brands fa-instagram fa-stack-1x"></i>
+    </a>
+    <a href="https://twitter.com/Yanshiro7" class="fa-stack fa-2x" target="_blank">
+        <i class="fa fa-circle fa-stack-2x"></i>
+        <i class="fa-brands fa-twitter fa-stack-1x"></i>
+    </a>
+    <div class="footer-p">
+
+    </div>
+    <p>E-mail: postavpc@zoznam.sk</p>
+    <p>Tel. číslo: +421 902 592 902</p>
+
 </footer>
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
