--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -30,7 +30,7 @@
 
               <% } %>
             <% if(typeof user == 'undefined') { %>
-                <a href="/login" class="nav-link col"><i class="fa-solid fa-arrow-right-to-bracket"></i> Prihlasit sa</a>
+                <a href="/login" class="nav-link col"><i class="fa-solid fa-arrow-right-to-bracket"></i> Prihlásiť sa</a>
                 <% } %>
 
             <a href="/cart" class="nav-link col"><i class="fa-solid fa-basket-shopping"></i> Košík</a>
