--- a/views/product.ejs
+++ b/views/product.ejs
@@ -10,7 +10,7 @@
             <p><%=product.desc%></p>
             <span class="price"><%=product.price.toFixed(2)%> €</span>
 
-            <form action="/buyproduct/<%=product._id%>" method="post">
+            <form action="/addtocart/<%=product._id%>" method="post">
                <button type="submit" class="btn btn-primary"><i class="fa-solid fa-cart-shopping"></i> Kúpiť</button>
             </form>
             <!-- <a href="#" class="btn btn-primary"><i class="fa-solid fa-cart-shopping"></i> Kúpiť</a> -->
