--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -219,6 +219,35 @@ footer>p {
     padding: 1rem 0;
 }
 
+.cart-buttons {
+    margin-top: 30px;
+    display: flex;
+}
+
+.continue-btn, .back-btn {
+    flex-grow: 1;
+    padding: 0 10% 0;
+}
+
+.continue-btn {
+    text-align: right;
+}
+
+
+
+.checkout-item {
+    display: flex;
+    align-items: center;
+    padding: 1rem 0;
+}
+
+.checkout-name>h1 {
+    font-size: 20px;
+    color: black;
+}
+
+
+
 #simple-cookie-consent {
     height: 100vh;
     width: 100vw;
