--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -4,7 +4,7 @@
         <div class="tab row">
             <h2>Košík</h2>
             <% for(let index=0; index < products.length; index++){ %>
-                <div class="item row cart-item">
+                <div class="row cart-item">
                     <div class="col-2 cart-image">
                         <img class="product-image" src="<%=products[index].img%>" alt="product-image">
                     </div>
@@ -36,13 +36,13 @@
             <h2>Sumár</h2>
             <div class="sum">
                 <div class="sum-div">
-                    <form action="/cart" method="get">
+                    <form action="/coupon" method="post">
                         <div class="form-group">
                             <label for="coupon">Zlavovy Kupon</label>
                             <input class="form-control" type="text" id="coupon" name="coupon">
                         </div>
                         <button type="submit" class="btn btn-primary">Uplatniť</button>
-                        
+                        <p>Uplatneny kupon: <%=couponName%></p>
                     </form>
                     
                 </div>
@@ -53,7 +53,12 @@
                 
             </div>
             <div class="cart-buttons">
-                <h2>Helo</h2>
+                <form action="/" method="get" class="back-btn">
+                    <button type="submit" class="btn btn-danger">Spať domov</button>
+                </form>
+                <form action="/checkout" method="get" class="continue-btn">
+                    <button type="submit" class="btn btn-primary">Pokračovať</button>
+                </form>
             </div>
             
         </div>
