Better profile, order history

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -246,7 +246,14 @@ footer>p {
     color: black;
 }
 
+.profile-buttons {
+    display: flex;
+}
 
+.orders-table tr {
+    border-bottom: solid 1px;
+    height: 50px;
+}
 
 #simple-cookie-consent {
     height: 100vh;
