--- a/views/login.ejs
+++ b/views/login.ejs
@@ -21,7 +21,7 @@
             </div>
             <button type="submit" class="btn btn-primary">Login</button>
         </form>
-        <p>Este nemas ucet ? <a href="/register">Zaregistrovat sa</a></p>
+        <p>Este nemáte účet ? <a href="/register">Zaregistrovat sa</a></p>
     </div>
 </body>
 </html>
