--- a/views/partials/sidenav.ejs
+++ b/views/partials/sidenav.ejs
@@ -8,7 +8,7 @@
         <a href="/categories/6">PC Skrinky</a>
         <a href="/categories/7">Zdroje</a>
         <a href="/categories/8">Chladenie</a>
-        <a href="/categories/9" style="color:red; font-weight: bold;">Black Friday</a>
+        <a href="/categories/9" style="color:red; font-weight: bold;">Zľavy</a>
     </div>
 
     <% if(typeof user !== 'undefined') { %>
