--- a/views/register.ejs
+++ b/views/register.ejs
@@ -12,23 +12,35 @@
 <body>
     <div class="content">
         <form action="/register" method="POST">
-            <div class="form-group">
-                <label for="username">Username</label>
-                <input class="form-control" type="text" id="username" name="username" required>
+
+            <div class="form-group has-validation">
+                <label for="username">Používateľské meno</label>
+                <input class="form-control <%= usernameValidation%>" type="text" id="username" name="username" required>
+                <div class="invalid-feedback">
+                    Toto používateľské meno už má niekto iný
+                </div>
             </div>
-            <div class="form-group">
+
+            <div class="form-group has-validation">
                 <label for="email">Email</label>
-                <input class="form-control" type="email" id="email" name="email" required>
+                <input class="form-control <%= emailValidation%>" type="email" id="email" name="email" required>
+                <div class="invalid-feedback">
+                    Používateľ s týmto emailom už existuje
+                </div>
             </div>
+
             <div class="form-group">
-                <label for="password">Password</label>
+                <label for="password">Heslo</label>
                 <input class="form-control" type="password" id="password" name="password" required>
             </div>
+
+
+
+              
             
-            
-            <button class="btn btn-primary" type="submit">Register</button>
+            <button class="btn btn-primary" type="submit">Zaregistrovať sa</button>
         </form>
-        <p>Uz mas ucet ? <a href="/login">Prihlasit sa</a></p>
+        <p>Už máš účet ? <a href="/login">Prihlásiť sa</a></p>
     </div>
 </body>
 </html>
