--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,7 +1,7 @@
 <%- include('partials/header', {user: user}); %>
     <div class="content">
         <div class="tab row">
-            <h2>Prihlásený ako: <%= user.email %></h2>
+            <h2>Prihlásený ako: <%= user.username %> (<%=user.email%>)</h2>
             
 
             <div class="profile-buttons">
