--- a/views/home.ejs
+++ b/views/home.ejs
@@ -42,7 +42,16 @@
                     <p class="card-text"><%=products[index].desc%></p>
                 </div>
                 <div class="my-card-footer">
-                    <span class="price"><%=products[index].price.toFixed(2)%> €</span>
+                    <% if(typeof category !== 'undefined') { %>
+                        <% if (category == 9) { %>
+                            <span class="price"><s><%=products[index].price.toFixed(2)%></s> €</span>
+                        <% } else { %>
+                            <span class="price"><%=products[index].price.toFixed(2)%> €</span>
+                        <% } %>
+                        
+                    <% } else { %>
+                        <span class="price"><%=products[index].price.toFixed(2)%> €</span>
+                    <% } %>
                     <form action="/addtocart/<%=products[index]._id%>" method="post">
                         <button type="submit" class="btn btn-primary"><i class="fa-solid fa-cart-shopping"></i> Kúpiť</button>
                      </form>
