Order tab for admin

--- a/views/partials/sidenav.ejs
+++ b/views/partials/sidenav.ejs
@@ -15,8 +15,8 @@
         <% if(user.isAdmin) { %>
             <div class="sidenav-group">
                 <a href="/newprod">Pridať nový produkt</a>
-                <a href="/cookies">Cookies</a>
-                
+                <a href="/orders">Objednávky</a>
+                <a href="/cookies">Cookies</a> 
             </div>
         <% } %> 
     <% } %>
