--- a/views/newprod.ejs
+++ b/views/newprod.ejs
@@ -37,10 +37,10 @@
                     <input type="number" class="form-control" name="newProdStock" required>
             </div>
 
-            <div class="form-group">
+            <!-- <div class="form-group">
                 <label for="newProdRating">Hodnotenie</label>
                     <input type="number" class="form-control" name="newProdRating" min="0" max="5" required>
-            </div>
+            </div> -->
             <div class="form-group">
                 <label for="newProdPrice">Cena</label>
                     <input type="number" class="form-control" name="newProdPrice" step="any" min="0" required>
