--- a/views/product.ejs
+++ b/views/product.ejs
@@ -9,27 +9,30 @@
             <h1><b><%=product.name%></b></h1>
             <p><%=product.desc%></p>
             <span class="price"><%=product.price.toFixed(2)%> €</span>
-
-            <form action="/addtocart/<%=product._id%>" method="post">
-               <button type="submit" class="btn btn-primary"><i class="fa-solid fa-cart-shopping"></i> Kúpiť</button>
-            </form>
-            <!-- <a href="#" class="btn btn-primary"><i class="fa-solid fa-cart-shopping"></i> Kúpiť</a> -->
+            <div class="product-buttons">
+               <form action="/addtocart/<%=product._id%>" method="post">
+                  <button type="submit" class="btn btn-primary m-2"><i class="fa-solid fa-cart-shopping"></i> Kúpiť</button>
+               </form>
+               <!-- <a href="#" class="btn btn-primary"><i class="fa-solid fa-cart-shopping"></i> Kúpiť</a> -->
+               
+               <% if(typeof user !== 'undefined') { %>
+                  <% if(user.isAdmin) { %>
+                     <form action="/deleteproduct/<%=product._id%>" method="post">
+                        <button type="submit" class="btn btn-danger m-2"><i class="fa-solid fa-trash-can"></i> Vymazať</button>
+                        <!-- <a href="#" class="btn btn-danger"><i class="fa-solid fa-trash-can"></i> Vymazať</a> -->
+                     </form>  
+                  <% } %> 
+              <% } %>
+            </div>
             
-            <% if(typeof user !== 'undefined') { %>
-               <% if(user.isAdmin) { %>
-                  <form action="/deleteproduct/<%=product._id%>" method="post">
-                     <button type="submit" class="btn btn-danger"><i class="fa-solid fa-trash-can"></i> Vymazať</button>
-                     <!-- <a href="#" class="btn btn-danger"><i class="fa-solid fa-trash-can"></i> Vymazať</a> -->
-                  </form>  
-               <% } %> 
-           <% } %>
          </div>
       </div>
       <div class="tab row">
          <h2>Recenzie</h2>
          <% for(let i = 0; i < product.reviews.length; i++) { %> 
             <div class="review tab">
-               <div><% for(let j = 0; j < product.reviews[i].stars; j++) {%>
+               <div>
+                  <% for(let j = 0; j < product.reviews[i].stars; j++) {%>
                   <i class="fa-solid fa-star"></i>
                   <% } %>
                   <% for(let j = 0; j < 5 - product.reviews[i].stars; j++) {%>
@@ -38,6 +41,13 @@
                </div>
                <p>od <b><%= product.reviews[i].user.username%></b></p>
                <p class="reviewBody"><%= product.reviews[i].comment%></p>
+               <!-- <% if(typeof user !== 'undefined') { %>
+                  <% if(user.isAdmin) { %>
+                     <form action="/deletereview/<%=product.reviews[i]._id%>" method="post">
+                        <button type="submit" class="btn btn-danger"><i class="fa-solid fa-trash-can"></i> Vymazať</button>
+                     </form>  
+                  <% } %> 
+              <% } %> -->
             </div>
 
 
